# plato-core

./: .gitignore  AGENT.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: MESH-ARCHITECTURE.md  README.md
npm/: package-lock.json  package.json  tsconfig.json
npm/src/: index.ts
plato_core/: __init__.py  protocol.py  registry.py  types.py
plato_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: lib.rs
tests/: test_advanced.py  test_protocol.py  test_registry.py  test_types.py
