[package]
name = "plato-core"
version = "0.1.0"
edition = "2021"
description = "Shared PLATO foundation — standardized TileId, Embedding, RoomId, SignalType, and common traits"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0.150"
