[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-core"
version = "0.1.0"
description = "Foundation types and mesh registry for the SuperInstance ecosystem"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.entry-points."superinstance.plugins"]
plato-core = "plato_core.registry:register_core"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["plato_core*"]
