[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-core"
version = "0.2.0"
description = "Foundation types and mesh registry for the SuperInstance ecosystem"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "SuperInstance"}]
keywords = ["plato", "types", "mesh", "registry", "superinstance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SuperInstance/plato-core"
Repository = "https://github.com/SuperInstance/plato-core"
Issues = "https://github.com/SuperInstance/plato-core/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.entry-points."superinstance.plugins"]
plato-core = "plato_core.registry:register_core"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["plato_core*"]
